# frontend-analyzer-provider

./: CROSS-COMPILATION.md  Cargo.toml  Makefile  README.md  provider_settings.json
.forgejo/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: capabilities.rs  fix.rs  incident.rs  lib.rs  report.rs  rules.rs
crates/css-scanner/: Cargo.toml  README.md
crates/css-scanner/src/: lib.rs  scanner.rs  scss_fallback.rs  selectors.rs  variables.rs
crates/fix-engine/: Cargo.toml  README.md
crates/fix-engine/src/: context.rs  engine.rs  goose_client.rs  language.rs  lib.rs  llm_client.rs  report.rs
crates/grpc/: Cargo.toml  README.md  build.rs
crates/grpc/src/: evaluate.rs  lib.rs  server.rs  service.rs
crates/js-fix/: Cargo.toml
crates/js-fix/src/: lib.rs
crates/js-scanner/: Cargo.toml  README.md
crates/js-scanner/src/: classnames.rs  css_vars.rs  dependency.rs  function_calls.rs  imports.rs  jsx.rs  lib.rs  lockfile.rs  resolve.rs  scanner.rs  transparency.rs  type_refs.rs
crates/konveyor-core/: Cargo.toml
crates/konveyor-core/src/: incident.rs  lib.rs  report.rs
crates/patternfly-fix-context/: Cargo.toml  README.md
crates/patternfly-fix-context/src/: lib.rs
design/: plan-subcommand-tests.md  plan-subcommand.md  requires-child.md
docs/: slides.md  slides.pptx
hack/: run-full-migration.sh
rules/patternfly-v5-to-v6/: 01-component-renames.yaml  02-component-removals.yaml  02-css-class-changes.yaml  03-accessibility-changes.yaml  03-prop-renames.yaml  04-prop-changes.yaml  04-prop-removals.yaml  05-prop-value-changes.yaml  06-dom-structure-changes.yaml  07-behavioral-changes.yaml  08-type-interface-changes.yaml  09-module-export-changes.yaml  10-misc-changes.yaml  11-component-groups-changes.yaml  12-react-tokens-changes.yaml  ruleset.yaml
scripts/: generate-quipucords-ui-plan.sh
src/: engine.rs  fix_engine.rs  goose_client.rs  llm_client.rs  main.rs
src/cli/: analyze.rs  fix.rs  mod.rs  plan.rs  plan_common.rs  serve.rs
tests/: plan_cli.rs
