[workspace]
members = ["crates/core", "crates/js-scanner", "crates/css-scanner", "crates/grpc", "crates/fix-engine", "crates/js-fix", "crates/patternfly-fix-context"]
resolver = "2"

[package]
name = "frontend-analyzer-provider"
version = "0.0.3"
edition = "2021"
description = "Konveyor external provider for JS/TS/JSX/TSX and CSS/SCSS analysis"
license = "Apache-2.0"
repository = "https://forge.hurley.page/shawn_hurley/frontend-analyzer-provider"

[dependencies]
konveyor-core = "0.0.3"
frontend-core = { version = "0.0.3", path = "crates/core" }
frontend-grpc = { version = "0.0.3", path = "crates/grpc" }
frontend-fix-engine = { version = "0.0.3", path = "crates/fix-engine" }
frontend-js-fix = { version = "0.0.3", path = "crates/js-fix" }
patternfly-fix-context = { version = "0.0.3", path = "crates/patternfly-fix-context" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

