[package]
name = "frontend-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, rule parser, and output format for frontend-analyzer-provider"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "=0.0.12"
anyhow = "1"
regex = "1"
walkdir = "2"
