[package]
name = "frontend-core"
version = "0.1.0"
edition = "2021"
description = "Provider-specific types and fix engine domain types for frontend-analyzer-provider"

[dependencies]
konveyor-core = { path = "../konveyor-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "=0.0.12"
anyhow = "1"
